@@ -15,19 +15,14 @@
  */
 package org.springframework.webflow.engine.builder.xml;
 
-import org.springframework.beans.factory.BeanFactory;
-import org.springframework.beans.factory.support.StaticListableBeanFactory;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.Resource;
 import org.springframework.webflow.action.AbstractAction;
 import org.springframework.webflow.definition.registry.FlowDefinitionResource;
 import org.springframework.webflow.engine.Flow;
-import org.springframework.webflow.engine.builder.FlowBuilder;
-import org.springframework.webflow.engine.builder.FlowServiceLocator;
 import org.springframework.webflow.execution.Action;
 import org.springframework.webflow.execution.Event;
 import org.springframework.webflow.execution.RequestContext;
-import org.springframework.webflow.test.MockFlowServiceLocator;
 import org.springframework.webflow.test.execution.AbstractXmlFlowExecutionTests;
 
 /**
@@ -71,20 +66,10 @@ public class NamedActionXmlFlowBuilderTests extends AbstractXmlFlowExecutionTest
 				new ClassPathResource("namedActionFlow.xml", NamedActionXmlFlowBuilderTests.class));
 	}
 
-	protected void registerMockServices(MockFlowServiceLocator serviceRegistry) {
-		serviceRegistry.registerBean("aAction", aAction);
-		serviceRegistry.registerBean("bBean", bBean);
-		serviceRegistry.registerBean("cAction", cAction);
-	}
-	
-	protected FlowBuilder createFlowBuilder(Resource resource, FlowServiceLocator flowServiceLocator) {
-		return new XmlFlowBuilder(resource, flowServiceLocator) {
-			protected BeanFactory createLocalBeanFactory(Flow flow, Resource[] resources) {
-				StaticListableBeanFactory beanFactory = new StaticListableBeanFactory();
-				beanFactory.addBean("bBean", bBean);
-				return beanFactory;
-			}
-		};
+	protected void registerLocalMockServices(Flow flow, ConfigurableBeanFactory beanFactory) {
+		beanFactory.registerSingleton("aAction", aAction);
+		beanFactory.registerSingleton("cAction", cAction);
+		beanFactory.registerSingleton("bBean", bBean);
 	}
 	
 	public void testActionExecutionOrder() {
