@@ -35,8 +35,8 @@ Package org.springframework.webflow.engine
 * Added name(String, Action) method to AbstractFlowBuilder for convenient creation of named actions.
 * AnnotatedAction now has a convenience putAttribute(String, Object) method.
 * Added annotate(Action) method to AbstractFlowBuilder.
-* Added createLocalBeanFactory(Flow flow, Resource[] resources) hook method to XmlFlowBuilder
-  to allow for control over the registration of beans needed locally by a flow definition.
+* Added createLocalBeanFactory(Flow, Resource[]) and registerLocalBeans(Flow, ConfigurableBeanFactory) hook
+  methods to XmlFlowBuilder to allow for control over the registration of beans needed locally by a flow definition.
   Useful for testing (SWF-307).
 
 Package org.springframework.webflow.execution
@@ -60,6 +60,7 @@ Package org.springframework.webflow.support
 Package org.springframework.webflow.test
 * Added the ability to apply multiple listeners to a test case (SWF-334).
 * Relaxed 'final' qualifier on AbstractXmlFlowExecutionTests#createFlowBuilder(FlowServiceLocator).
+* Added registerLocalMockServices(Flow, ConfigurableBeanFactory) hook method to AbstractXmlFlowExecutionTests.
   Overriding this method is useful for customizing the builder's population of the bean factory local to the
   flow definition (SWF-307).
 
